infrastructure/talos01/config/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "192.168.2.20"
spec:
  tls:
    - hosts:
        - git.bsdserver.nl
      secretName: gitea-tls
  rules:
    - host: git.bsdserver.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 3000
